<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black"
    xmlns:range="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:padding="@dimen/_10sdp"
        android:weightSum="10"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp">
        <TextView
            android:id="@+id/tv_on_off"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_5sdp"
            android:textSize="@dimen/_15sdp"
            android:gravity="center|left"
            android:textColor="@color/textColor"
            android:text="@string/on_off"
            android:layout_weight="8.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:gravity="center"
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <ToggleButton
                android:padding="@dimen/_12sdp"
                android:id="@+id/btn_on_off"
                android:textOn=""
                android:textOff=""
                android:background="@drawable/custom_togen"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp" />

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:background="#5c5c5c"
        android:layout_width="match_parent"
        android:layout_height="1dp">

    </LinearLayout>
<ScrollView
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp">


        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.9"
                android:gravity="center|bottom"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_sleep"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:layout_gravity="center|bottom"
                    android:src="@drawable/moon" />

                <TextView
                    android:id="@+id/tv_sleep"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|bottom"
                    android:text="@string/time_sleep"
                    android:textColor="@color/textWakeUp"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>

            <LinearLayout
                android:gravity="center|bottom"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_wake_up"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:layout_gravity="center|bottom"
                    android:src="@drawable/alarm" />

                <TextView
                    android:id="@+id/tv_wake_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|bottom"
                    android:text="@string/time_wake_up"
                    android:textColor="@color/textSleep"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:gravity="center|top"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/txt_Seep"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="00:00"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_25sdp" />


            <TextView
                android:id="@+id/txt_Time_WakeUp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="00:00"
                android:gravity="center"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_25sdp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.example.tienthinh.timesleep.widgets.CircularSliderRange
                android:id="@+id/circular"
                android:layout_width="@dimen/_240sdp"
                android:layout_height="@dimen/_220sdp"
                android:layout_gravity="center"
                android:paddingBottom="@dimen/_10sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                range:arc_color="@color/Yellow"
                range:arc_dash_size="@dimen/_22sdp"
                range:border_color="#363636"
                range:border_thickness="@dimen/_22sdp"
                range:end_angle="30"
                range:end_thumb_image="@drawable/ic_wakeup"
                range:start_angle="0"
                android:layout_centerHorizontal="true"
                range:start_thumb_color="#30AEFF"
                range:start_thumb_size="@dimen/_22sdp"
                range:end_thumb_size="@dimen/_22sdp"
                range:thumb_size="@dimen/_50sdp"
                range:start_thumb_image="@drawable/ic_sleep" />

            <TextView
                android:id="@+id/txt_Tong_Time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:text="00:00"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_35sdp"
                tools:layout_editor_absoluteY="0dp" />

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_220sdp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true">

            </RelativeLayout>

        </RelativeLayout>


        <!--<FrameLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center">-->


        <!--</FrameLayout>-->
        <LinearLayout
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_barchar"
                android:src="@drawable/ic_mpchar"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp" />
            <TextView
                android:id="@+id/tv_barchar"
                android:paddingLeft="@dimen/_10sdp"
                android:textSize="@dimen/_14sdp"
                android:textColor="#fff"
                android:text="@string/sleep_time_statistics"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <RelativeLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/barchart"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_115sdp" />
            <RelativeLayout
                android:id="@+id/relativeLayoutBarchar"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </RelativeLayout>

        </RelativeLayout>



    </LinearLayout>

</ScrollView>


    <!--<RelativeLayout-->
        <!--android:visibility="gone"-->
        <!--android:id="@+id/relativeLayout"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

    <!--</RelativeLayout>-->

</LinearLayout>